--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,67 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	  package="org.fosdem"
-	  android:versionCode="4"
-	  android:versionName="1.0.2">
-	  <uses-permission android:name="android.permission.INTERNET" />
-	  <uses-permission android:name="android.permission.VIBRATE" />
-	  <supports-screens android:smallScreens="true" 
-                  android:normalScreens="true" 
-                  android:largeScreens="true" 
-                  android:anyDensity="true" />
-	
-	<application 
-		android:icon="@drawable/icon" 
-		android:label="@string/app_name" 
-	>
-		<meta-data android:name="android.app.default_searchable"
-			   android:value="org.fosdem.schedules.Main" />
-		<uses-library android:name="android.test.runner"/>
-		<activity android:name="org.fosdem.schedules.Main"
-				  android:label="@string/app_name"
-				  android:theme="@android:style/Theme.NoTitleBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-			<!-- Receives the search request. -->
-			<intent-filter>
-				<action android:name="android.intent.action.SEARCH" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-			<!-- Points to searchable meta data. -->
-			<meta-data android:name="android.app.searchable"
-					android:resource="@xml/searchable"/>
-		</activity>
-		<activity android:name="org.fosdem.schedules.DisplayEvent"
-						  android:theme="@android:style/Theme.NoTitleBar">
-			<intent-filter>
-				<action android:name="org.fosdem.schedules.DISPLAY_EVENT" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-		<activity android:name="org.fosdem.schedules.TrackListActivity"/>
-		<activity android:name="org.fosdem.schedules.EventListActivity"/>
-		<activity android:name="org.fosdem.schedules.Preferences"/>
+  package="org.fosdem"
+  android:versionCode="4"
+  android:versionName="1.0.2">
 
- 		<receiver android:name=".broadcast.NotificationReceiver" android:exported="false">
-			<intent-filter>
-				<action android:name="org.fosdem.action.favorites_update" />
-			</intent-filter>
-			<intent-filter>
-				<action android:name="org.fosdem.action.favorites_initial_load"/>
-			</intent-filter>
-			<intent-filter>
-				<action android:name="org.fosdem.action.favorites_alarm" />
-				<data android:scheme="event" />
-			</intent-filter>
-		</receiver>
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
 
-		<provider android:name="org.fosdem.db.DBAdapter" android:authorities="org.fosdem.pojo.Event"/>
-		<!-- Provides search suggestions for words and their definitions. -->
-		<provider android:name="org.fosdem.providers.SearchProvider"
-			android:authorities="fosdemsearch"
-			android:syncable="false" />
-	</application>
-	<uses-sdk  android:targetSdkVersion="4" android:minSdkVersion="3"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application
+      android:icon="@drawable/icon"
+      android:label="@string/app_name"
+      android:theme="@style/FosdemTheme">
+
+        <meta-data
+          android:name="android.app.default_searchable"
+          android:value="org.fosdem.schedules.Main" />
+
+        <activity
+          android:name="org.fosdem.schedules.Main"
+          android:label="@string/app_name"
+          android:theme="@style/FosdemTheme.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <!-- Receives the search request. -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <!-- Points to searchable meta data. -->
+            <meta-data
+              android:name="android.app.searchable"
+              android:resource="@xml/searchable" />
+        </activity>
+
+        <activity
+          android:name="org.fosdem.schedules.DisplayEvent"
+          android:theme="@style/FosdemTheme.NoTitleBar">
+            <intent-filter>
+                <action android:name="org.fosdem.schedules.DISPLAY_EVENT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+          android:name="org.fosdem.schedules.TrackListActivity" />
+
+        <activity
+          android:name="org.fosdem.schedules.EventListActivity" />
+
+        <activity android:name="org.fosdem.schedules.Preferences"/>
+
+        <receiver android:name=".broadcast.NotificationReceiver" android:exported="false">
+            <intent-filter>
+                <action android:name="org.fosdem.action.favorites_update" />
+                <action android:name="org.fosdem.action.favorites_initial_load"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="org.fosdem.action.favorites_alarm" />
+                <data android:scheme="event" />
+            </intent-filter>
+        </receiver>
+
+        <provider android:name="org.fosdem.db.DBAdapter" android:authorities="org.fosdem.pojo.Event"/>
+
+        <!-- Provides search suggestions for words and their definitions. -->
+        <provider android:name="org.fosdem.providers.SearchProvider"
+            android:authorities="fosdemsearch"
+            android:syncable="false" />
+    </application>
+
 </manifest> 
