--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -15,7 +15,7 @@
     the package of org.fosdem.  To run the tests use the command:
     "adb shell am instrument -w org.fosdem.tests/android.test.InstrumentationTestRunner"
     -->
-    <instrumentation android:name="android.test.InstrumentationTestRunner"
+    <instrumentation android:name="com.zutubi.android.junitreport.JUnitReportTestRunner"
                      android:targetPackage="org.fosdem"
                      android:label="Tests for org.fosdem"/>
 </manifest>
