--- a/tests/ant.properties
+++ b/tests/ant.properties
@@ -16,3 +16,6 @@
 # The password will be asked during the build when you use the 'release' target.
 
 tested.project.dir=../app
+
+# Use custom test runner
+test.runner=com.zutubi.android.junitreport.JUnitReportTestRunner
