--- a/tests/build.xml
+++ b/tests/build.xml
@@ -79,7 +79,24 @@
          In all cases you must update the value of version-tag below to read 'custom' instead of an integer,
          in order to avoid having your file be overridden by tools such as "android update project"
     -->
-    <!-- version-tag: 1 -->
+    <!-- version-tag: custom -->
+    <property name="reports.dir" value="reports" />
+
+    <target name="-pre-clean">
+        <delete dir="${reports.dir}" failonerror="false" />
+    </target>
+
+    <target name="fetch-test-report">
+        <echo>Downloading XML test report...</echo>
+        <mkdir dir="${reports.dir}"/>
+        <exec executable="${adb}" failonerror="true">
+            <arg line="${adb.device.arg}"/>
+            <arg value="pull" />
+            <arg value="/data/data/${tested.manifest.package}/files/junit-report.xml" />
+            <arg value="${reports.dir}/junit-report.xml" />
+        </exec>
+    </target>
+
     <import file="${sdk.dir}/tools/ant/build.xml" />
 
 </project>
