--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -4,7 +4,7 @@
   android:versionCode="4"
   android:versionName="1.0.2">
 
-    <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="13" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="13" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -21,7 +21,7 @@
         <activity
           android:name="org.fosdem.schedules.Main"
           android:label="@string/app_name"
-          android:theme="@style/FosdemTheme.NoTitleBar">
+          android:theme="@style/FosdemTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -39,20 +39,35 @@
 
         <activity
           android:name="org.fosdem.schedules.DisplayEvent"
-          android:theme="@style/FosdemTheme.NoTitleBar">
+          android:theme="@style/FosdemTheme">
             <intent-filter>
                 <action android:name="org.fosdem.schedules.DISPLAY_EVENT" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+	            android:name="android.support.PARENT_ACTIVITY"
+	            android:value="org.fosdem.schedules.EventListActivity" />
         </activity>
 
         <activity
-          android:name="org.fosdem.schedules.TrackListActivity" />
+          android:name="org.fosdem.schedules.TrackListActivity">
+            <meta-data
+	            android:name="android.support.PARENT_ACTIVITY"
+	            android:value="org.fosdem.schedules.Main" />
+        </activity>
 
         <activity
-          android:name="org.fosdem.schedules.EventListActivity" />
+          android:name="org.fosdem.schedules.EventListActivity">
+            <meta-data
+	            android:name="android.support.PARENT_ACTIVITY"
+	            android:value="org.fosdem.schedules.TrackListActivity" />
+        </activity>
 
-        <activity android:name="org.fosdem.schedules.Preferences"/>
+        <activity android:name="org.fosdem.schedules.Preferences">
+            <meta-data
+	            android:name="android.support.PARENT_ACTIVITY"
+	            android:value="org.fosdem.schedules.Main" />
+        </activity>
 
         <receiver android:name=".broadcast.NotificationReceiver" android:exported="false">
             <intent-filter>
