--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -51,14 +51,16 @@
         </activity>
 
         <activity
-          android:name="org.fosdem.schedules.TrackListActivity">
+          android:name="org.fosdem.schedules.TrackListActivity"
+          android:theme="@style/FosdemTheme">
             <meta-data
 	            android:name="android.support.PARENT_ACTIVITY"
 	            android:value="org.fosdem.schedules.Main" />
         </activity>
 
         <activity
-          android:name="org.fosdem.schedules.EventListActivity">
+          android:name="org.fosdem.schedules.EventListActivity"
+          android:theme="@style/FosdemTheme">
             <meta-data
 	            android:name="android.support.PARENT_ACTIVITY"
 	            android:value="org.fosdem.schedules.TrackListActivity" />
