Add library dependencies as git submodules.
Otherwise the project can't easily be built out of the box.

--- a/app/project.properties
+++ b/app/project.properties
@@ -11,3 +11,6 @@
 split.density=false
 # Project target.
 target=android-14
+
+android.library.reference.1=../libraries/ActionBarSherlock/library
+android.library.reference.2=../libraries/StickyListHeaders/library
